--- a/now.json
+++ b/now.json
@@ -1,1 +1,1 @@
-{"version":2,"name":"wheretowork.io","builds":[{"src":"package.json","use":"@now/static-build","config":{"distDir":"public"}}]}
+{"alias": ["wheretowork.io","www.wheretowork.io"],"version":2,"name":"wheretowork.io","builds":[{"src":"package.json","use":"@now/static-build","config":{"distDir":"public"}}]}
