--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "gatsby-starter-default",
   "version": "1.0.0",
   "dependencies": {
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.4",
-    "gatsby-transformer-sharp": "^2.1.4",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "gatsby": "2.0.19",
+    "gatsby-image": "2.0.15",
+    "gatsby-plugin-manifest": "2.0.5",
+    "gatsby-plugin-offline": "2.0.11",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-sharp": "2.0.7",
+    "gatsby-source-filesystem": "2.0.4",
+    "gatsby-transformer-sharp": "2.1.4",
+    "react": "16.5.1",
+    "react-dom": "16.5.1",
+    "react-helmet": "5.2.0"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "prettier": "1.14.2"
   },
   "scripts": {
     "build": "gatsby build",
