--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "dependencies": {
     "gatsby": "2.19.41",
     "gatsby-image": "2.2.43",
-    "gatsby-plugin-manifest": "2.0.5",
-    "gatsby-plugin-offline": "2.0.11",
+    "gatsby-plugin-manifest": "^2.2.47",
+    "gatsby-plugin-offline": "^3.0.40",
     "gatsby-plugin-react-helmet": "3.1.23",
     "gatsby-plugin-sharp": "2.4.12",
-    "gatsby-source-filesystem": "2.1.6",
-    "gatsby-transformer-sharp": "2.1.6",
+    "gatsby-source-filesystem": "^2.1.54",
+    "gatsby-transformer-sharp": "^2.3.18",
     "react": "16.13.0",
-    "react-dom": "16.5.1",
+    "react-dom": "^16.13.0",
     "react-helmet": "5.2.1"
   },
   "devDependencies": {
-    "prettier": "1.14.2"
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "build": "gatsby build",
